--- a/content/about.html
+++ b/content/about.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="about.html">Hakkında</a>
+    <a href="about.html">derya</a>
     <a href="index.html">Anasayfa</a>
     <a href="contact.html">İletişim</a>
 
