--- a/content/about.html
+++ b/content/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="about.html">derya</a>
-    <a href="index.html">Anasayfa</a>
+    <a href="index.html">Anasayfa1</a>
     <a href="contact.html">İletişim</a>
 
     <div>
