--- a/content/about.html
+++ b/content/about.html
@@ -8,7 +8,7 @@
 <body>
     <a href="about.html">derya</a>
     <a href="index.html">Anasayfa1</a>
-    <a href="contact.html">İletişim</a>
+    <a href="contact.html">İletişim1</a>
 
     <div>
     Hakkında Sayfası
